--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,7 @@ project:
 website:
   title: "hazelwood.dev"
   site-url: https://henkehazelwood.github.io/
-  description: "a data science and deep learning blog by and for henke hazelwood"
+  description: "Blog"
   navbar:
     left:
       - href: index.qmd
@@ -15,8 +15,6 @@ website:
     right:
       - icon: github
         href: https://github.com/
-      - icon: twitter
-        href: https://twitter.com
       - icon: rss
         href: index.xml
 
