Change custom URL.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,7 @@ project:
 
 website:
   title: "hazelwood.dev"
-  site-url: https://hazelwood.dev/
+  site-url: hazelwood.dev
   description: "Blog"
   navbar:
     left:
